--- a/.eslintrc
+++ b/.eslintrc
@@ -6,9 +6,7 @@
     "comma-dangle": 0,
     "no-underscore-dangle": 0,
     "no-param-reassign": 0,
-    "prefer-template": 0,
-    "no-plusplus": 0,
-    "no-unused-vars": ["error", { "argsIgnorePattern": "next" }]
+    "prefer-template": 0
   },
   "parserOptions": {
     "ecmaVersion": 2015
