--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,8 @@
     "comma-dangle": 0,
     "no-underscore-dangle": 0,
     "no-param-reassign": 0,
-    "prefer-template": 0
+    "prefer-template": 0,
+    "prefer-destructuring": 0
   },
   "parserOptions": {
     "ecmaVersion": 2015
