--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
   },
   "devDependencies": {
     "eslint": "^5.8.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "pre-commit": "^1.2.2"
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "pre-commit": "^1.2.2",
+    "prettier": "^1.15.2"
   }
 }
