--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "test": "eslint ."
+    "pretest": "npm run lint",
+    "test": "mocha"
   },
   "pre-commit": "test",
   "author": {
@@ -28,10 +29,14 @@
     "flora-errors": "^2.0.0"
   },
   "devDependencies": {
+    "abstract-logging": "^2.0.0",
+    "chai": "^4.2.0",
     "eslint": "^7.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "mocha": "^8.1.3",
     "pre-commit": "^1.2.2",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "promise-events": "^0.1.8"
   }
 }
