--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flora-auth-jwt",
+  "name": "@florajs/auth-jwt",
   "version": "2.2.0",
   "description": "JSON Web Token authentication for Flora",
   "main": "index.js",
@@ -16,6 +16,12 @@
     "name": "BörseGo AG",
     "email": "it@boerse-go.de"
   },
+  "keywords": [
+    "florajs",
+    "auth",
+    "jwt"
+  ],
+  "homepage": "https://github.com/florajs/auth-jwt",
   "license": "MIT",
   "repository": "florajs/auth-jwt",
   "contributors": [
@@ -29,12 +35,12 @@
   },
   "dependencies": {
     "jsonwebtoken": "^8.5.1",
-    "flora-errors": "^2.1.0"
+    "@florajs/errors": "^3.0.0"
   },
   "devDependencies": {
     "abstract-logging": "^2.0.1",
     "chai": "^4.3.4",
-    "eslint": "^8.5.0",
+    "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "mocha": "^9.1.3",
