--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   ],
   "pre-commit": "test",
   "author": {
-    "name": "BörseGo AG",
-    "email": "it@boerse-go.de"
+    "name": "stock3 AG",
+    "email": "it@stock3.com"
   },
   "keywords": [
     "florajs",
@@ -27,25 +27,25 @@
   "contributors": [
     {
       "name": "Nico Kaiser",
-      "email": "nico.kaiser@boerse-go.de"
+      "email": "nico.kaiser@stock3.com"
     }
   ],
   "engines": {
     "node": ">=12"
   },
   "dependencies": {
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^9.0.1",
     "@florajs/errors": "^3.0.0"
   },
   "devDependencies": {
     "abstract-logging": "^2.0.1",
     "chai": "^4.3.7",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "mocha": "^10.2.0",
     "pre-commit": "^1.2.2",
-    "prettier": "^2.8.2",
+    "prettier": "^3.0.1",
     "promise-events": "^0.2.4"
   }
 }
