--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint .",
     "pretest": "npm run lint",
-    "test": "mocha"
+    "test": "node --test"
   },
   "files": [
     "index.js"
@@ -31,21 +31,19 @@
     }
   ],
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   },
   "dependencies": {
-    "jsonwebtoken": "^9.0.1",
+    "jsonwebtoken": "^9.0.2",
     "@florajs/errors": "^4.0.0"
   },
   "devDependencies": {
     "abstract-logging": "^2.0.1",
-    "chai": "^4.3.7",
-    "eslint": "^8.46.0",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "mocha": "^10.2.0",
+    "eslint": "^9.9.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "pre-commit": "^1.2.2",
-    "prettier": "^3.0.1",
+    "prettier": "^3.3.3",
     "promise-events": "^0.2.4"
   }
 }
