--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   ],
   "homepage": "https://github.com/florajs/auth-jwt",
   "license": "MIT",
-  "repository": "florajs/auth-jwt",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/florajs/auth-jwt.git"
+  },
   "contributors": [
     {
       "name": "Nico Kaiser",
